# dbt_demo

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml  selector.yml
.hooks/: commit-msg  pre-commit
models/: sources.yml
models/event/dws/: life_time_value.sql  life_time_value_test.yaml  logins.sql  retention.sql  trans.sql
models/geo/ads/: dashboard_od.sql  dashboard_overview.sql  dashboard_provider.sql
models/geo/dws/: dws_city.sql  dws_origin_destination.sql
scripts/: generate_events.py  generate_trips.py  load_events.sql  load_trips.sql
seeds/: properties.yml  provider.csv
