[project]
name = "dbt_demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "towardsyou", email = "email@example.com"},
]
dependencies = [
    "dbt-core>=1.8.6",
    "dbt-duckdb>=1.8.3",
    "dbt-adapters>=1.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
