[project]
name = "dbt_demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "towardsyou", email = "email@example.com"},
]
dependencies = [
    "dbt-core>=1.8.6",
    "dbt-duckdb>=1.8.3",
    "dbt-adapters>=1.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "sqlfluff>=3.2.0",
]

[tool.sqlfluff.core]
templater = "jinja"
dialect = "duckdb"
sql_file_exts = ".sql"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = false
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true